--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -185,7 +185,7 @@ window.onload = function() {
 {% endblock %}
 
 {% block content %}
-<canvas id="canvas" class="grid_12"  resize></canvas>
+<canvas id="canvas" class="grid_12 alpha" resize></canvas>
 
 <img src="/static/img/snail_teeth.png" class="sprite" id="snail" />
 <img src="/static/img/larger_houseplan.png" class="sprite" id="house" />
