--- a/game/templates/game/create_game.html
+++ b/game/templates/game/create_game.html
@@ -5,9 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="grid_4"><p>&nbsp;</p></div>
-
-    <div class="grid_4" style="text-align: center; padding-top: 10px">
+    <div class="grid_4 push_4" style="text-align: center; padding-top: 10px">
         <p>List of Players:</p>
         
         <div id="player_list"></div>
