--- a/game/templates/game/join_game.html
+++ b/game/templates/game/join_game.html
@@ -5,17 +5,13 @@
 {% endblock %}
 
 {% block content %}
-    <div class="grid_1"><p>&nbsp;</p></div>
-
-    <div class="grid_5" style="text-align: center; padding-top: 10px">
+    <div class="grid_5 push_1" style="text-align: center; padding-top: 10px">
         <p>List of Games:</p>
         
         <div id="game_list"></div>
     </div>
     
-    <div class="grid_1"><p>&nbsp;</p></div>
-    
-    <div class="grid_4" id="joined_game_info">
+    <div class="grid_4 push_2" id="joined_game_info">
         <p style="text-align: left">You Joined: <span id="game_name"></span></p>
         
         <p>List of Players:</p>
