Starting the game works

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -1,8 +1,9 @@
 {% extends 'game/base.html' %}
 
 {% block extra_js %}
-<script type = "text/javascript" src="/static/js/paper.js"></script>
-<script type = "text/javascript" src="/static/js/entity.js"></script>
+    <script type="text/javascript" src="/static/js/game.js"></script>
+    <script type="text/javascript" src="/static/js/paper.js"></script>
+    <script type="text/javascript" src="/static/js/entity.js"></script>
 <script type = "text/javascript">
 paper.install(window);
 window.onload = function() {
