Game page layout for 1 person game

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -207,7 +207,9 @@ window.onload = function() {
 {% endblock %}
 
 {% block content %}
-<canvas id="canvas" class="grid_12 alpha" resize></canvas>
+{% if game.players.count == 1 %}
+    <canvas id="canvas" class="grid_12 alpha" resize></canvas>
+{% endif %}
 
 <img src="/static/img/snail_teeth.png" class="sprite" id="snail" />
 <img src="/static/img/larger_houseplan.png" class="sprite" id="house" />
