Added modal for game instructions, TODO instructions

--- a/game/templates/game/base.html
+++ b/game/templates/game/base.html
@@ -27,6 +27,7 @@
 
     <script type="text/javascript" src="/static/js/paper.js"></script>
     <script type="text/javascript" src="/static/js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="/static/js/bootstrap-modal.js"></script>
     {% block extra_js %}{% endblock %}
 
 </body>
