--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -220,6 +220,18 @@ $(function() {
     </div>
 {% endif %}
 
+<div id="instructions_modal" class="modal hide">
+    <div class="modal-header">
+        <h3>Game Instructions</h3>
+    </div>
+    <div class="modal-body">
+        <p>Here we need instructions...</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn btn-primary btn-danger" data-dismiss="modal">Got It!</a>
+    </div>
+</div>
+
 <img src="/static/img/snail_teeth.png" class="sprite" id="snail" />
 <img src="/static/img/larger_houseplan.png" class="sprite" id="house" />
 <img src="/static/img/ghost_gun.png" class="sprite" id="ghost" />
