--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -36,7 +36,7 @@ $(function() {
     var floor4Room2 = new Room(view.center.add(new Point(-230, -150)));
     var floor4Room3 = new Room(view.center.add(new Point(230, -150)));
     var floor4Room4 = new Room(view.center.add(new Point(830, -150)));
-    var floor5Room1 = new Room(view.center.add(new Point(-230, -450)));
+    var floor5Room1 = new Room(view.center.add(new Point(-250, -450)));
     var floor5Room2 = new Room(view.center.add(new Point(430, -450)));
     var floor6Room1 = new Room(view.center.add(new Point(-100, -750)));
 
@@ -49,13 +49,13 @@ $(function() {
     floor1Room1.setDoorLeadingRight(floor1Room2);
     
     stairs1 = new Stairs(floor1Room2.position.add(new Point(110, 0)),
-                         floor2Room1.position.add(new Point(-150, 0)));
+                         floor2Room1.position.add(new Point(-175, 0)));
     floor1Room2.setUpStairs(floor2Room1, stairs1);
     floor1Room2.setDoorLeadingLeft(floor1Room1);
     floor1Room2.setDoorLeadingRight(mainRoom);
     
-    stairs2 = new Stairs(floor1Room3.position.add(new Point(130, 0)),
-                         floor2Room2.position.add(new Point(-170, 0)));
+    stairs2 = new Stairs(floor1Room3.position.add(new Point(110, 0)),
+                         floor2Room2.position.add(new Point(-185, 0)));
     floor1Room3.setUpStairs(floor2Room2, stairs2);
     floor1Room3.setDoorLeadingLeft(mainRoom);
     floor1Room3.setDoorLeadingRight(floor1Room4);
@@ -64,23 +64,23 @@ $(function() {
 
 
     /* Second Floor initialisation. */
-    stairs3 = new Stairs(floor2Room1.position.add(new Point(130, 0)),
-                         floor3Room1.position.add(new Point(-170, 0)));
+    stairs3 = new Stairs(floor2Room1.position.add(new Point(110, 0)),
+                         floor3Room1.position.add(new Point(-175, 0)));
     floor2Room1.setUpStairs(floor3Room1, stairs3);
     floor2Room1.setDownStairs(floor1Room2, stairs1);
     
     floor2Room2.setDownStairs(floor1Room3, stairs2);
     floor2Room2.setDoorLeadingRight(floor2Room3);
 
-    stairs4 = new Stairs(floor2Room3.position.add(new Point(-130, 0)),
-                         floor3Room5.position.add(new Point(170, 0)));
+    stairs4 = new Stairs(floor2Room3.position.add(new Point(-110, 0)),
+                         floor3Room5.position.add(new Point(175, 0)));
     floor2Room3.setUpStairs(floor3Room5, stairs4);
     floor2Room3.setDoorLeadingLeft(floor2Room2);
 
 
     /* Third Floor initialization. */
-    stairs5 = new Stairs(floor3Room1.position.add(new Point(130, 0)),
-                         floor4Room1.position.add(new Point(-170, 0)));
+    stairs5 = new Stairs(floor3Room1.position.add(new Point(110, 0)),
+                         floor4Room1.position.add(new Point(-175, 0)));
     floor3Room1.setUpStairs(floor4Room1, stairs5);
     floor3Room1.setDownStairs(floor2Room1, stairs3);
     floor3Room1.setDoorLeadingRight(floor3Room2);
@@ -91,8 +91,8 @@ $(function() {
     floor3Room3.setDoorLeadingLeft(floor3Room2);
     floor3Room3.setDoorLeadingRight(floor3Room4);
 
-    stairs6 = new Stairs(floor3Room4.position.add(new Point(-130, 0)),
-                         floor4Room4.position.add(new Point(70, 0)));
+    stairs6 = new Stairs(floor3Room4.position.add(new Point(-110, 0)),
+                         floor4Room4.position.add(new Point(35, 0)));
     floor3Room4.setUpStairs(floor4Room4, stairs6);
     floor3Room4.setDoorLeadingLeft(floor3Room3);
     floor3Room4.setDoorLeadingRight(floor3Room5);
@@ -102,8 +102,8 @@ $(function() {
 
 
     /* Fourth Floor initialization. */
-    stairs7 = new Stairs(floor4Room1.position.add(new Point(130, 0)),
-                         floor5Room1.position.add(new Point(-570, 0)));
+    stairs7 = new Stairs(floor4Room1.position.add(new Point(120, 0)),
+                         floor5Room1.position.add(new Point(-615, 0)));
     floor4Room1.setUpStairs(floor5Room1, stairs7);
     floor4Room1.setDownStairs(floor3Room1, stairs5);
     floor4Room1.setDoorLeadingRight(floor4Room2);
@@ -111,8 +111,8 @@ $(function() {
     floor4Room2.setDoorLeadingLeft(floor4Room1);
     floor4Room2.setDoorLeadingRight(floor4Room3);
 
-    stairs8 = new Stairs(floor4Room3.position.add(new Point(130, 0)),
-                         floor5Room2.position.add(new Point(-370, 0)));
+    stairs8 = new Stairs(floor4Room3.position.add(new Point(100, 0)),
+                         floor5Room2.position.add(new Point(-385, 0)));
     floor4Room3.setUpStairs(floor5Room2, stairs8);
     floor4Room3.setDoorLeadingLeft(floor4Room2);
     floor4Room3.setDoorLeadingRight(floor4Room4);
@@ -121,8 +121,8 @@ $(function() {
     floor4Room4.setDoorLeadingLeft(floor4Room3);
 
     /* Fifth Floor initialization. */
-    stairs9 = new Stairs(floor5Room1.position.add(new Point(-70, 0)),
-                         floor6Room1.position.add(new Point(50, 0)));
+    stairs9 = new Stairs(floor5Room1.position.add(new Point(-95, 0)),
+                         floor6Room1.position.add(new Point(60, 0)));
     floor5Room1.setUpStairs(floor6Room1, stairs9);
     floor5Room1.setDownStairs(floor4Room1, stairs7);
     floor5Room1.setDoorLeadingRight(floor5Room2);
@@ -134,7 +134,8 @@ $(function() {
     floor6Room1.setDownStairs(floor5Room1, stairs9);
 
 
-    var snailmoo = new SnailGroup(3, floor3Room3);
+    var snailmoo = new SnailGroup(5, floor3Room3);
+    //var snailmoo = new Ghost('blue', floor3Room3);
 
     var scaleCount = 0; 
     var weight = 1;
@@ -233,7 +234,7 @@ $(function() {
 </div>
 
 <img src="/static/img/snail_teeth.png" class="sprite" id="snail" />
-<img src="/static/img/larger_houseplan.png" class="sprite" id="house" />
+<img src="/static/img/new_houseplan.png" class="sprite" id="house" />
 <img src="/static/img/ghost_gun.png" class="sprite" id="ghost" />
 <img src="/static/img/ghost_ammobox.png" class="sprite" id="ghostbox" />
 <img src="/static/img/ammobox.png" class="sprite" id="ammobox" />
