All door barricades

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -18,8 +18,8 @@ $(function() {
     //var snail = new SnailGroup(5);
     //var snailmoo = new SnailGroup(5);
 
-    //var snailmoo = new SnailGroup(5, floor3Room3);
-    var snailmoo = new Ghost('blue', floor3Room3);
+    var snailmoo = new SnailGroup(5, floor3Room3);
+    //var snailmoo = new Ghost('blue', floor3Room3);
 
     var scaleCount = 0; 
     var weight = 1;
