--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -123,7 +123,7 @@ $(function() {
 </div>
 
 <img src="/static/img/snail_teeth.png" class="sprite" id="snail" />
-<img src="/static/img/final_houseplan.png" class="sprite" id="house" />
+<img src="/static/img/houseplan.jpg" class="sprite" id="house" />
 <img src="/static/img/ghost_gun.png" class="sprite" id="ghost" />
 <img src="/static/img/ghost_ammobox.png" class="sprite" id="ghostbox" />
 <img src="/static/img/ammobox.png" class="sprite" id="ammobox" />
