--- a/game/static/css/style.css
+++ b/game/static/css/style.css
@@ -22,6 +22,7 @@ border: 1px solid #bbb;
 border-radius: 20px;
 box-shadow: 2px 2px 1px #eee;
 overflow: hidden;
+margin-bottom: 20px;
 }
 
 /*#index_canvas {
