Lovely green buttons, go well with the snails

--- a/game/templates/game/create_game.html
+++ b/game/templates/game/create_game.html
@@ -10,7 +10,7 @@
         
         <div id="player_list"></div>
 
-        <p><a class="btn btn-danger" id="btn_start_game" href="{% url start_game %}">
+        <p><a class="btn btn-success" id="btn_start_game" href="{% url start_game %}">
             <i class="icon-ok icon-white"></i>&nbsp;Start the Game
         </a></p>
     </div>
