--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -29,10 +29,10 @@
             {% endif %}
 
             <br>
-            <a class="btn btn-danger" id="btn_create_game" href="#">
+            <a class="btn btn-success" id="btn_create_game" href="#">
                 <i class="icon-edit icon-white"></i>&nbsp;Create a Game
             </a>
-            <a class="btn btn-danger" id="btn_join_game" href="#">
+            <a class="btn btn-success" id="btn_join_game" href="#">
                 <i class="icon-user icon-white"></i>&nbsp;Join a Game
             </a>
         </form>
