More green buttons

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -103,7 +103,7 @@ $(function() {
         <div style="height: 100px"></div>
         <p>
             <input type="text" style="width: 110px" id="message_input" />
-            <a class="btn btn-danger" href="#">Send</a>
+            <a class="btn btn-success" href="#">Send</a>
         </p>
     </div>
 </div>
@@ -116,7 +116,7 @@ $(function() {
         <p>Here we need instructions...</p>
     </div>
     <div class="modal-footer">
-        <a href="#" class="btn btn-primary btn-danger" data-dismiss="modal">Got It!</a>
+        <a href="#" class="btn btn-primary btn-success" data-dismiss="modal">Got It!</a>
     </div>
 </div>
 
