Control buttons in place

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -97,6 +97,14 @@ $(function() {
 <div class="grid_3 alpha">
     <div style="padding: 10px">
         <h3>Game Controls:</h3>
+        <p>
+            <a class="btn btn-success control_btn_left" href="#">Move</a>
+            <a class="btn btn-success control_btn_right" href="#">Barricade</a>
+        </p>
+        <p>
+            <a class="btn btn-success control_btn_left" href="#">Shoot</a>
+            <a class="btn btn-success control_btn_right" href="#">Reload</a>
+        </p>
     </div>
     <div style="padding: 10px;">
         <h3>Chat:</h3>
