--- a/game/static/css/style.css
+++ b/game/static/css/style.css
@@ -104,6 +104,15 @@ padding-top: 10px;
 display: none;
 }
 
+.control_btn_left {
+width: 70px;
+margin-right: 10px;
+}
+
+.control_btn_right {
+width: 70px;
+}
+
 .error {
 color: #f00;
 margin-bottom: 0px;
