Togglable action buttons

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -1,6 +1,7 @@
 {% extends 'game/base.html' %}
 
 {% block extra_js %}
+    <script type="text/javascript" src="/static/js/bootstrap-button.js"></script>
     <script type="text/javascript" src="/static/js/game.js"></script>
     <script type="text/javascript" src="/static/js/paper.js"></script>
     <script type="text/javascript" src="/static/js/entity.js"></script>
@@ -98,12 +99,12 @@ $(function() {
     <div style="padding: 10px">
         <h3>Game Controls:</h3>
         <p>
-            <a class="btn btn-success control_btn_left" href="#">Move</a>
-            <a class="btn btn-success control_btn_right" href="#">Barricade</a>
+            <a class="btn btn-success control_btn_left" id="btn_move" href="#" data-toggle="button">Move</a>
+            <a class="btn btn-success control_btn_right" id="btn_barricade" href="#" data-toggle="button">Barricade</a>
         </p>
         <p>
-            <a class="btn btn-success control_btn_left" href="#">Shoot</a>
-            <a class="btn btn-success control_btn_right" href="#">Reload</a>
+            <a class="btn btn-success control_btn_left" id="btn_shoot" href="#" data-toggle="button">Shoot</a>
+            <a class="btn btn-success control_btn_right" id="btn_reload" href="#" data-toggle="button">Reload</a>
         </p>
     </div>
     <div style="padding: 10px;">
