weird invisible barricades?

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -85,6 +85,18 @@ $(function() {
         if (event.key == 'l') {
             snailmoo.drop();
         }
+        if (event.key == 't') {
+            snailmoo.barricadeUp();
+        }
+        if (event.key == 'f') {
+            snailmoo.barricadeLeft();
+        }
+        if (event.key == 'g') {
+            snailmoo.barricadeDown();
+        }
+        if (event.key == 'h') {
+            snailmoo.barricadeRight();
+        }
 
     }
 
