--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -97,7 +97,6 @@ $(function() {
 <canvas id="canvas" class="grid_9 alpha"></canvas>
 <div class="grid_3 alpha">
     <div style="padding: 10px">
-        <h3>Game Controls:</h3>
         <p>
             <a class="btn btn-success control_btn_left" id="btn_move" href="#" data-toggle="button">Move</a>
             <a class="btn btn-success control_btn_right" id="btn_barricade" href="#" data-toggle="button">Barricade</a>
@@ -105,6 +104,29 @@ $(function() {
         <p>
             <a class="btn btn-success control_btn_left" id="btn_shoot" href="#" data-toggle="button">Shoot</a>
             <a class="btn btn-success control_btn_right" id="btn_reload" href="#" data-toggle="button">Reload</a>
+        </p>
+
+        <p>&nbsp;</p>
+        <p>
+            <a class="btn btn-success arrow_btn" id="btn_arrow_up" href="#" data-toggle="button">
+                <i class="icon-arrow-up icon-white"></i>
+            </a>
+        </p>
+        <p>
+            <a class="btn btn-success arrow_btn" id="btn_arrow_left" href="#" data-toggle="button">
+                <i class="icon-arrow-left icon-white"></i>
+            </a>
+            <a class="btn btn-success arrow_btn" id="btn_arrow_go" href="#">
+                <i class="icon-ok icon-white"></i>
+            </a>
+            <a class="btn btn-success arrow_btn" id="btn_arrow_right" href="#" data-toggle="button">
+                <i class="icon-arrow-right icon-white"></i>
+            </a>
+        </p>
+        <p>
+            <a class="btn btn-success arrow_btn" id="btn_arrow_down" href="#" data-toggle="button">
+                <i class="icon-arrow-down icon-white"></i>
+            </a>
         </p>
     </div>
     <div style="padding: 10px;">
