Toggle button loveliness

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -1,7 +1,7 @@
 {% extends 'game/base.html' %}
 
 {% block extra_js %}
-    <script type="text/javascript" src="/static/js/bootstrap-button.js"></script>
+    <script type="text/javascript" src="/static/js/bootstrap-button.js"></script> <!-- remove -->
     <script type="text/javascript" src="/static/js/game.js"></script>
     <script type="text/javascript" src="/static/js/paper.js"></script>
     <script type="text/javascript" src="/static/js/entity.js"></script>
@@ -98,33 +98,33 @@ $(function() {
 <div class="grid_3 alpha">
     <div style="padding: 10px">
         <p>
-            <a class="btn btn-success control_btn_left" id="btn_move" href="#" data-toggle="button">Move</a>
-            <a class="btn btn-success control_btn_right" id="btn_barricade" href="#" data-toggle="button">Barricade</a>
+            <a class="btn btn-success control_btn_left" id="btn_move" href="#">Move</a>
+            <a class="btn btn-success control_btn_right" id="btn_barricade" href="#">Barricade</a>
         </p>
         <p>
-            <a class="btn btn-success control_btn_left" id="btn_shoot" href="#" data-toggle="button">Shoot</a>
-            <a class="btn btn-success control_btn_right" id="btn_reload" href="#" data-toggle="button">Reload</a>
+            <a class="btn btn-success control_btn_left" id="btn_shoot" href="#">Shoot</a>
+            <a class="btn btn-success control_btn_right" id="btn_reload" href="#">Reload</a>
         </p>
 
         <p>&nbsp;</p>
         <p>
-            <a class="btn btn-success arrow_btn" id="btn_arrow_up" href="#" data-toggle="button">
+            <a class="btn btn-success arrow_btn" id="btn_arrow_up" href="#">
                 <i class="icon-arrow-up icon-white"></i>
             </a>
         </p>
         <p>
-            <a class="btn btn-success arrow_btn" id="btn_arrow_left" href="#" data-toggle="button">
+            <a class="btn btn-success arrow_btn" id="btn_arrow_left" href="#">
                 <i class="icon-arrow-left icon-white"></i>
             </a>
             <a class="btn btn-success arrow_btn" id="btn_arrow_go" href="#">
-                <i class="icon-ok icon-white"></i>
+            GO
             </a>
-            <a class="btn btn-success arrow_btn" id="btn_arrow_right" href="#" data-toggle="button">
+            <a class="btn btn-success arrow_btn" id="btn_arrow_right" href="#">
                 <i class="icon-arrow-right icon-white"></i>
             </a>
         </p>
         <p>
-            <a class="btn btn-success arrow_btn" id="btn_arrow_down" href="#" data-toggle="button">
+            <a class="btn btn-success arrow_btn" id="btn_arrow_down" href="#">
                 <i class="icon-arrow-down icon-white"></i>
             </a>
         </p>
