--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -60,12 +60,12 @@ $(function() {
         }
         if ((event.key == 'i') && (scaleCount < 2)) {
             project.activeLayer.scale(1.25, view.center);
-            weight *= 0.8;
+            weight *= 0.9;
             scaleCount++;
         }
         if ((event.key == 'o') && (scaleCount > -6)) {
             project.activeLayer.scale(0.8, view.center);
-            weight *= 1.25;
+            weight *= 1 / 0.9;
             scaleCount--;
         }
         if (event.key == 'right') {
