--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -128,7 +128,7 @@ $(function() {
             <a class="btn btn-success arrow_btn" id="btn_arrow_left" href="#">
                 <i class="icon-arrow-left icon-white"></i>
             </a>
-            <a class="btn btn-success arrow_btn" id="btn_arrow_go" href="#">
+            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_go" href="#">
                 GO
             </a>
             <a class="btn btn-success arrow_btn" id="btn_arrow_right" href="#">
